--- a/layouts/partials/social_icons.html
+++ b/layouts/partials/social_icons.html
@@ -1,14 +1,14 @@
 <div class="social-icons">
-    {{- range .Site.Params.social }}
+    {{- range .icons }}
     {{- $icon_name := ( trim .name " " | lower )}}
 
     {{- if (eq .url "email") }}
     <a href="mailto:{{ $.MaskedEmail | default $.Email }}" title="{{ .name | title }}">
-        {{ safeHTML (index .Site.Data.svg $icon_name.icon | default "") }}
+        {{ safeHTML (index $.svg $icon_name | default $.svg.default) }}
     </a>
     {{- else }}
     <a href="{{ trim .url " " }}" target="_blank" rel="noopener noreferrer me" title="{{ .name | title }}">
-        {{ safeHTML (index .Site.Data.svg $icon_name.icon | default "") }}
+        {{ safeHTML (index $.svg $icon_name | default $.svg.default) }}
     </a>
     {{- end }}
 
