--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -66,6 +66,7 @@ function toggleThemeListener() {
     switchTheme(theme);
   })();
 </script>
+
 <header class="header">
     <nav class="nav">
         <div class="logo">
@@ -75,18 +76,51 @@ function toggleThemeListener() {
                 {{- if site.Params.logo.icon }}
                 {{- $img := resources.Get site.Params.logo.icon }}
                 {{- if $img }}
+                    {{- $processableFormats := (slice "jpg" "jpeg" "png" "tif" "bmp" "gif") -}}
+                    {{- if hugo.IsExtended -}}
+                        {{- $processableFormats = $processableFormats | append "webp" -}}
+                    {{- end -}}
+                    {{- $prod := (hugo.IsProduction | or (eq site.Params.env "production")) }}
+                    {{- if and (in $processableFormats $img.MediaType.SubType) (eq $prod true)}}
+                        {{- if site.Params.logo.iconHeight }}
+                            {{- $img = $img.Resize (printf "x%d" site.Params.logo.iconHeight) }}
+                        {{ else }}
+                            {{- $img = $img.Resize "x30" }}
+                        {{- end }}
+                    {{- end }}
                     <img src="{{ $img.Permalink }}" alt="logo" aria-label="logo"
                         height="{{- site.Params.logo.iconHeight | default "30" -}}" width="{{- site.Params.logo.iconWidth | default "30" -}}">
                 {{- else }}
-                    <img src="/default-logo.png" alt="logo" aria-label="logo">
-                {{- end }}
-                {{- else }}
-                    <img src="/default-logo.png" alt="logo" aria-label="logo">
-                {{- end }}
+                <img src="{{ $img.Permalink }}" alt="logo" aria-label="logo"
+                    height="{{- site.Params.logo.iconHeight | default "30" -}}" width="{{- site.Params.logo.iconWidth | default "30" -}}">
+                {{- end -}}
+                {{- end -}}
+                {{- $label_text -}}
             </a>
             {{- end }}
             <span class="logo-switches">
-                {{- /* <button id="theme-toggle" accesskey="t" title="(Alt + T)"> ... </button> */}}
+                {{- if (not site.Params.disableThemeToggle) }}
+                <button id="theme-toggle" accesskey="t" title="(Alt + T)">
+                    <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                    </svg>
+                    <svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="5"></circle>
+                        <line x1="12" y1="1" x2="12" y2="3"></line>
+                        <line x1="12" y1="21" x2="12" y2="23"></line>
+                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                        <line x1="1" y1="12" x2="3" y2="12"></line>
+                        <line x1="21" y1="12" x2="23" y2="12"></line>
+                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                    </svg>
+                </button>
+                {{- end }}
             </span>
         </div>
         {{- $currentPage := . }}
@@ -110,6 +144,5 @@ function toggleThemeListener() {
             </li>
             {{- end }}
         </ul>
-        {{ partial "social_icons.html" (dict "icons" site.Params.social "svg" site.Data.svg "Email" site.Params.email ) }}
     </nav>
 </header>
