--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,10 @@
   {{ .Content }}
 </div>
 
+<div class="home-social-icons" style="margin: 2rem 0; text-align: center;">
+  {{ partial "social_icons.html" (dict "icons" site.Params.social "svg" site.Data.svg "Email" site.Params.email ) }}
+</div>
+
 {{ $posts := where .Site.RegularPages "Type" "posts" }}
 
 {{ $sortedPosts := sort $posts "Weight" }}
@@ -19,7 +23,6 @@
       </header>
 
       <section class="entry-content">
-
         <p>{{ .Description }}</p> 
       </section>
 
