--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -79,6 +79,8 @@ function toggleThemeListener() {
             <img src="{{ $img.Permalink }}" alt="logo" aria-label="logo"
                  height="{{ site.Params.logo.iconHeight | default "30" }}"
                  width="{{ site.Params.logo.iconWidth | default "30" }}">
+          {{- else }}
+            <img src="/default-logo.png" alt="logo" height="30" width="30">
           {{- end }}
         {{- else }}
           <img src="/default-logo.png" alt="logo" height="30" width="30">
@@ -87,13 +89,13 @@ function toggleThemeListener() {
 
       <span class="logo-switches">
         {{- if (not site.Params.disableThemeToggle) }}
-        <button id="theme-toggle" accesskey="t" onclick="toggleThemeListener()">
-          <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+        <button id="theme-toggle" accesskey="t" onclick="toggleThemeListener()" title="Toggle theme (Alt+T)">
+          <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                viewBox="0 0 24 24" fill="none" stroke="currentColor"
                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
           </svg>
-          <svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+          <svg id="sun" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                viewBox="0 0 24 24" fill="none" stroke="currentColor"
                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="12" cy="12" r="5"></circle>
@@ -131,7 +133,5 @@ function toggleThemeListener() {
       </li>
       {{- end }}
     </ul>
-    {{ partial "social_icons.html" (dict "icons" site.Params.social "svg" site.Data.svg "Email" site.Params.email ) }}
-
   </nav>
 </header>
