--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -16,13 +16,12 @@
 {{- end }}
 
 
-{{- if (.Param "ShowWordCount") -}}
-<span class="meta-item">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text" style="user-select: text;"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" style="user-select: text;"></path><polyline points="14 2 14 8 20 8" style="user-select: text;"></polyline><line x1="16" y1="13" x2="8" y2="13" style="user-select: text;"></line><line x1="16" y1="17" x2="8" y2="17" style="user-select: text;"></line><polyline points="10 9 9 9 8 9" style="user-select: text;"></polyline></svg>
-  <span>
-    {{- i18n "words" .WordCount | default (printf "%d words" .WordCount) -}}
-  </span></span>
-{{- end }}
+{{ if .Params.ShowWordCount }}
+  {{- $content := .Plain | replaceRE "\\s+" "" -}}
+  {{- $runeCount := len $content -}}
+  <span>{{ $runeCount }} 字</span>
+{{ end }}
+
 
 
 {{- if (.Param "ShowReadingTime") -}}
