--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,4 +1,3 @@
-
 {{- if not .Date.IsZero -}}
 <span class="meta-item">
   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar" style="user-select: text;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2" style="user-select: text;"></rect><line x1="16" y1="2" x2="16" y2="6" style="user-select: text;"></line><line x1="8" y1="2" x2="8" y2="6" style="user-select: text;"></line><line x1="3" y1="10" x2="21" y2="10" style="user-select: text;"></line></svg>
@@ -15,31 +14,29 @@
   </span></span>
 {{- end }}
 
+{{- $wc := partial "custom_wordcount.html" . -}}
+{{- $rt := div (add $wc 299) 300 -}} {{/* 每 300 字 -> 1 分钟 */}}
 
 {{- if (.Param "ShowWordCount") -}}
 <span class="meta-item">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text" style="user-select: text;"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" style="user-select: text;"></path><polyline points="14 2 14 8 20 8" style="user-select: text;"></polyline><line x1="16" y1="13" x2="8" y2="13" style="user-select: text;"></line><line x1="16" y1="17" x2="8" y2="17" style="user-select: text;"></line><polyline points="10 9 9 9 8 9" style="user-select: text;"></polyline></svg>
-  <span>
-    {{- i18n "words" .WordCount | default (printf "%d words" .WordCount) -}}
-  </span></span>
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+  <span>{{ $wc }} words</span>
+</span>
 {{- end }}
-
 
 {{- if (.Param "ShowReadingTime") -}}
 <span class="meta-item">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><circle cx="12" cy="12" r="9"></circle><polyline points="12 7 12 12 15 15"></polyline></svg>
-  <span>
-    {{- i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime) -}}
-  </span></span>
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="9"></circle><polyline points="12 7 12 12 15 15"></polyline></svg>
+  <span>{{ $rt }} min</span>
+</span>
 {{- end }}
-
+{{/* --- 自定义中文字数统计 END --- */}}
 
 {{- if (.Param "ShowAuthor") -}}
 <span class="meta-item">
   <svg xmlns="http://www.w3.org/2000/svg"width="24" height="24" viewBox="0 0 24 24" stroke="black" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><circle cx="12" cy="7" r="4"></circle><path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path></svg>
   {{- partial "author.html" . -}}</span>
 {{- end }}
-
 
 {{- if .IsTranslated -}}
 <span class="meta-item">
@@ -53,7 +50,7 @@
         {{- .Language.LanguageName | emojify -}}
       {{- else }}
         {{- .Lang | title -}}
-      {{- end -}}
+      {{- end }}
     </a>
     {{- end }}
   {{- end }}
