--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,6 +18,7 @@
       {{ partial "cover.html" (dict "cxt" . "IsHome" true) }} 
 
       <header class="entry-header">
+	  <meta name="baidu-site-verification" content="codeva-poCkz0ZZwF" />
         <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
       </header>
 
